# UntitledEngine

./: .gitignore  2.2.basic_lighting.fs  2.2.light_cube.fs  2.2.light_cube.vs  CMakeLists.txt  PublicItem.h  README.md
resource/: work
resource/materials/material001/: material001.json  test.fs  test.vs
resource/scenes/: Scene1  Scene2
src/: Asset.cpp  Asset.h  ComponentManager.cpp  ComponentManager.h  Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  EditorWindow.cpp  EditorWindow.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  PublicItem.h  RenderSystem.cpp  RenderSystem.h  RuntimeResManager.cpp  RuntimeResManager.h  Scene.cpp  Scene.h  Work.cpp  Work.h  camera.h  main.cpp  mesh.h  shader.h
src/Components/: Component.cpp  Component.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
src/Editors/: FileManager.cpp  FileManager.h  InspectorUI.cpp  InspectorUI.h
